// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper should display (without an edit or a remove icon) 1`] = `
<div>
  <div
    class="draggable widgetWrapper"
    data-expand-container="true"
  >
    <div
      class="wrapper"
      style="box-shadow: inset 3px 0 0 var(--shopifyGreen);"
    >
      <div
        class="anchor"
        id="shopify"
      />
    </div>
  </div>
</div>
`;

exports[`Wrapper should render customer external data widget with the proper id 1`] = `
<div>
  <div
    class="draggable widgetWrapper"
    data-expand-container="true"
  >
    <div
      class="wrapper"
      style="box-shadow: inset 3px 0 0 var(--customerExternalDataGray);"
    >
      <div
        class="anchor"
        id="my_wonderful_app_name"
      />
    </div>
  </div>
</div>
`;

exports[`Wrapper should render woocommerce widget with the proper id 1`] = `
<div>
  <div
    class="draggable widgetWrapper"
    data-expand-container="true"
  >
    <div
      class="wrapper"
      style="box-shadow: inset 3px 0 0 var(--woocommercePurple);"
    >
      <div
        class="anchor"
        id="woo_commerce"
      />
    </div>
  </div>
</div>
`;
